--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
     "ms": "^2.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
     "rollup": "^0.67.0",
+    "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "^9.1.0",
-    "rollup-plugin-node-resolve": "^3.0.0"
+    "rollup-plugin-filesize": "^5.0.1",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-uglify": "^6.0.0"
   },
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "bo": "rollup -c rollup.dev.js",
+    "bw": "rollup -w -c rollup.dev.js",
+    "bp": "rollup -c rollup.prod.js",
     "test": "node test/test.js",
     "pretest": "npm run build"
   },
